# bank-connector

./: .pylintrc  README.rst  pyproject.toml
.github/workflows/: build.yaml
bank_connector/: authorization.py  client.py  session.py
bank_connector/banks/: commerz_bank.py  deutsche_bank.py
tests/: test_authorization.py  test_bank_connector.py  test_deutsche_bank.py
