[tool.poetry]
name = "bank-connector"
version = "0.1.0"
description = "Client for multiple banks"
authors = [
    "Tilman Möller <moeller.tilman@gmail.com>",
    "Steven Mi <stevenmi@live.de>"
]
readme = "README.rst"
repository = "https://github.com/twosumarmy/bank-connector"
homepage = "https://github.com/twosumarmy/bank-connecto"
documentation = "https://github.com/twosumarmy/bank-connecto"
keywords = ["bank", "connector"]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
